Prevent wrapping within times or dates

--- a/src/jukebox/static/style.css
+++ b/src/jukebox/static/style.css
@@ -138,6 +138,10 @@ abbr {
     color: grey;
 }
 
+#history .when .date, #history .when .time {
+    white-space: nowrap;
+}
+
 #history .what {
     font-weight: bold;
     padding: 2px;
